# hse-python-ind1

./: Makefile  ReadMe.md  pyproject.toml  setup.cfg
src/: ToDoHandler.py  ToDoItem.py  ToDoManager.py  TodoManager.py  __main__.py
tests/: conftest.py  test_api.py
